fix overflow graph

--- a/graph-view/src/app/globals.css
+++ b/graph-view/src/app/globals.css
@@ -65,5 +65,8 @@
   }
   body {
     @apply bg-background text-foreground;
+    &[data-layout=graph]{
+      @apply overflow-hidden;
+    }
   }
 }
